test/fail/enums_and_variants/enum_too_few_variants.lily
#[
SyntaxError: An enum must have at least two variants.
    from enum_too_few_variants.lily:8:
]#

enum Test[A] {
    One(A)
}
